Update generated slides

--- a/presentations/README.html
+++ b/presentations/README.html
@@ -89,7 +89,7 @@ and brings F# to the <a href="https://github.com/hakimel/reveal.js/" title="reve
         // Full list of configuration options available here:
         // https://github.com/hakimel/reveal.js#configuration
         Reveal.initialize({
-            controls: true,
+            controls: {controls},
             progress: true,
             history: true,
             center: true,
