--- a/presentations/sample.html
+++ b/presentations/sample.html
@@ -245,7 +245,7 @@ main <span class="prep">=</span> <span class="k">do</span>
         // Full list of configuration options available here:
         // https://github.com/hakimel/reveal.js#configuration
         Reveal.initialize({
-            controls: true,
+            controls: {controls},
             progress: true,
             history: true,
             center: true,
