Update generated slides

--- a/presentations/65.html
+++ b/presentations/65.html
@@ -55,6 +55,7 @@
 <p>Cantico 121 "Abbiamo bisogno di padronanza"</p>
 </section>
 <section >
+<section >
 <img src="images/automobilista_arrabbiato.jpg" alt="Automobilista arrabbiato" style="width:1000px;">  
 </section>
 <section >
@@ -80,6 +81,7 @@
 <h3>La mansuetudine</h3>
 <img src="images/contadino2.jpg" alt="mansuetudine" style="width:700px;">  
 <p><em>"...abituato alla mano"</em></p>
+</section>
 </section>
 
 
