--- a/presentations/65.html
+++ b/presentations/65.html
@@ -56,10 +56,10 @@
 </section>
 <section >
 <section >
-<img src="images/automobilista_arrabbiato.jpg" alt="Automobilista arrabbiato" style="width:1000px;">  
+<img src="./images/automobilista_arrabbiato.jpg" alt="Automobilista arrabbiato" style="width:1000px;">  
 </section>
 <section >
-<img src="images/terrorismo.PNG" alt="terrorismo" style="width:700px;">  
+<img src="./images/terrorismo.png" alt="terrorismo" style="width:700px;">  
 <blockquote>
 <p>L'oppressione può far agire follemente il saggio - Ecclesiaste 7:7.</p>
 </blockquote>
