--- a/presentations/65.html
+++ b/presentations/65.html
@@ -59,7 +59,7 @@
 <img src="./images/automobilista_arrabbiato.jpg" alt="Automobilista arrabbiato" style="width:1000px;">  
 </section>
 <section >
-<img src="./images/terrorismo.png" alt="terrorismo" style="width:650px;">  
+<img src="./images/terrorismo.jpg" alt="terrorismo" style="width:650px;">  
 <blockquote>
 <p>L'oppressione può far agire follemente il saggio - Ecclesiaste 7:7.</p>
 </blockquote>
