Update generated slides

--- a/presentations/65.html
+++ b/presentations/65.html
@@ -75,13 +75,59 @@
 <li>fieri</li>
 </ul>
 </blockquote>
-<h5>2 Timoteo 3:1-3</h5>
+<p><em>2 Timoteo 3:1-3</em></p>
 </section>
 <section >
 <h3>La mansuetudine</h3>
 <img src="images/contadino2.jpg" alt="mansuetudine" style="width:700px;">  
 <p><em>"...abituato alla mano"</em></p>
 </section>
+</section>
+<section >
+<section >
+<blockquote>
+<p>"Se possibile, per quanto dipende da voi, siate pacifici con tutti gli uomini..."</p>
+</blockquote>
+<p><em>Romani 12:18</em></p>
+</section>
+<section >
+<blockquote>
+<p>"Non vi vendicate... fate posto all'ira...<br />
+'La vendetta è mia; io ricompenserò, dice Geova'"</p>
+</blockquote>
+<p><em>Romani 12:19</em></p>
+</section>
+<section >
+<blockquote>
+<p>"Se il tuo nemico ha fame, dagli da mangiare..."</p>
+</blockquote>
+<p><em>Romani 12:20</em></p>
+</section>
+<section >
+<blockquote>
+<p>"Non farti vincere dal male..."</p>
+</blockquote>
+<p><em>Romani 12:21</em></p>
+</section>
+<section >
+<blockquote>
+<p>"Continua a vincere il male col bene."</p>
+</blockquote>
+<p><em>Romani 12:21</em></p>
+</section>
+<section >
+<p><img src="./images/sorelleDiJamesByrd.jpg" alt="Sorelle di James Byrd jr." />
+<em>"...Cosa averebbe fatto Gesù?"</em></p>
+</section>
+<section >
+<p><img src="./images/pentola.jpg" alt="La pentola sbolle" /><br />
+Non <strong>reprimete</strong> la rabbia per poi esplodere.</p>
+<p>Geova ci aiuta a <strong>eliminare</strong> i sentimenti dannosi.</p>
+</section>
+</section>
+<section >
+<p><img src="./images/hafeni.jpg" alt="Hafeni" /><br />
+<em>"Non avrei mai pensato che mi sarebbe capitato di rivolgermi a un bianco chiamadolo fratello"</em></p>
 </section>
 
 
