Update generated slides

--- a/presentations/65.html
+++ b/presentations/65.html
@@ -51,7 +51,7 @@
         <div class="slides">
             <section >
 <h3>Tema:</h3>
-<h2><strong>Pacifici</strong> in un mondo pieno di rabbia</h2>
+<h2><strong>Pacifici</strong> in un mondo pieno di <strong>rabbia</strong></h2>
 <p>Cantico 121 "Abbiamo bisogno di padronanza"</p>
 </section>
 <section >
@@ -81,6 +81,15 @@
 <h3>La mansuetudine</h3>
 <img src="images/contadino2.jpg" alt="mansuetudine" style="width:700px;">  
 <p><em>"...abituato alla mano"</em></p>
+</section>
+<section >
+<h3>Voi tutti i mansueti della terra</h3>
+<blockquote>
+<p>"Cercate Geova...
+Cercate la giustizia...<br />
+Cercate la mansuetudine."</p>
+</blockquote>
+<p><em>Sofonia 2:3</em></p>
 </section>
 </section>
 <section >
@@ -126,8 +135,27 @@ Non <strong>reprimete</strong> la rabbia per poi esplodere.</p>
 </section>
 </section>
 <section >
+<section >
 <p><img src="./images/hafeni.jpg" alt="Hafeni" /><br />
 <em>"Non avrei mai pensato che mi sarebbe capitato di rivolgermi a un bianco chiamadolo fratello"</em></p>
+</section>
+<section >
+<p><img src="./images/joseGomez1.jpg" alt="Gomez1" /><br />
+<em>"Giurai vendetta!"</em></p>
+</section>
+<section >
+<p><img src="./images/joseGomez2.jpg" alt="Gomez2" /><br />
+<em>"Ringrazio Geova per avermi liberato dalle catene dell’odio"</em></p>
+</section>
+<section >
+<img src="./images/jim.jpg" alt="jim" style="height:600px;"><img src="./images/andy.jpg" alt="Andy" style="height:600px;">  
+</section>
+</section>
+<section >
+<blockquote>
+<p>"Lascia stare l'ira e abbandona il furore"
+<em>Salmo 37:8</em></p>
+</blockquote>
 </section>
 
 
