Update generated slides

--- a/presentations/bakti.html
+++ b/presentations/bakti.html
@@ -46,21 +46,21 @@
 </head>
 <body>
     <div class="reveal">
-        <div class="tip" id="fs1">type Model = int<br /><br />Full name: index.Model</div>
+        <div class="tip" id="fs1">type Model = int<br /><br />Full name: bakti.Model</div>
 <div class="tip" id="fs2">Multiple items<br />val int : value:&#39;T -&gt; int (requires member op_Explicit)<br /><br />Full name: Microsoft.FSharp.Core.Operators.int<br /><br />--------------------<br />type int = int32<br /><br />Full name: Microsoft.FSharp.Core.int<br /><br />--------------------<br />type int&lt;&#39;Measure&gt; = int<br /><br />Full name: Microsoft.FSharp.Core.int&lt;_&gt;</div>
-<div class="tip" id="fs3">type Msg =<br />&#160;&#160;| Increment<br />&#160;&#160;| Decrement<br /><br />Full name: index.Msg</div>
+<div class="tip" id="fs3">type Msg =<br />&#160;&#160;| Increment<br />&#160;&#160;| Decrement<br /><br />Full name: bakti.Msg</div>
 <div class="tip" id="fs4">union case Msg.Increment: Msg</div>
 <div class="tip" id="fs5">union case Msg.Decrement: Msg</div>
-<div class="tip" id="fs6">val init : unit -&gt; Model<br /><br />Full name: index.init</div>
-<div class="tip" id="fs7">val view : model:&#39;a -&gt; dispatch:&#39;b -&gt; &#39;c<br /><br />Full name: index.view</div>
+<div class="tip" id="fs6">val init : unit -&gt; Model<br /><br />Full name: bakti.init</div>
+<div class="tip" id="fs7">val view : model:&#39;a -&gt; dispatch:&#39;b -&gt; &#39;c<br /><br />Full name: bakti.view</div>
 <div class="tip" id="fs8">val model : &#39;a</div>
 <div class="tip" id="fs9">val dispatch : &#39;b</div>
 <div class="tip" id="fs10">System.Object.ToString() : string</div>
-<div class="tip" id="fs11">val update : msg:Msg -&gt; model:Model -&gt; Model<br /><br />Full name: index.update</div>
+<div class="tip" id="fs11">val update : msg:Msg -&gt; model:Model -&gt; Model<br /><br />Full name: bakti.update</div>
 <div class="tip" id="fs12">val msg : Msg</div>
 <div class="tip" id="fs13">val model : Model</div>
 <div class="tip" id="fs14">type &#39;T list = List&lt;&#39;T&gt;<br /><br />Full name: Microsoft.FSharp.Collections.list&lt;_&gt;</div>
-<div class="tip" id="fs15">val view : model:&#39;a -&gt; dispatch:(&#39;b -&gt; &#39;c) -&gt; &#39;d<br /><br />Full name: index.view</div>
+<div class="tip" id="fs15">val view : model:&#39;a -&gt; dispatch:(&#39;b -&gt; &#39;c) -&gt; &#39;d<br /><br />Full name: bakti.view</div>
 <div class="tip" id="fs16">val dispatch : (&#39;b -&gt; &#39;c)</div>
 <div class="tip" id="fs17">val counterDispatch : (&#39;e -&gt; &#39;f -&gt; &#39;c)</div>
 <div class="tip" id="fs18">val i : &#39;e</div>
@@ -70,7 +70,7 @@
 <div class="tip" id="fs22">val mapi : mapping:(int -&gt; &#39;T -&gt; &#39;U) -&gt; list:&#39;T list -&gt; &#39;U list<br /><br />Full name: Microsoft.FSharp.Collections.List.mapi</div>
 <div class="tip" id="fs23">val i : int</div>
 <div class="tip" id="fs24">val c : obj</div>
-<div class="tip" id="fs25">val update : msg:Msg -&gt; model:Model -&gt; &#39;a<br /><br />Full name: index.update</div>
+<div class="tip" id="fs25">val update : msg:Msg -&gt; model:Model -&gt; &#39;a<br /><br />Full name: bakti.update</div>
 <div class="tip" id="fs26">val Insert : Msg</div>
 <div class="tip" id="fs27">val Remove : Msg</div>
 <div class="tip" id="fs28">val id : x:&#39;T -&gt; &#39;T<br /><br />Full name: Microsoft.FSharp.Core.Operators.id</div>
