--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 	</p>
 	<h3>
 		<ul>
-			<li> <a href="/presentations/65.html">Pacifici in un mondo pieno di rabbia</a></li>
+			<!--li> <a href="/presentations/65.html">Pacifici in un mondo pieno di rabbia</a></li-->
+			<li> <a href="/presentations/bakti.html">Bakti</a></li>
 		</ul>
 	</h3>
 	</body>
