Update generated slides

--- a/presentations/bakti.html
+++ b/presentations/bakti.html
@@ -288,12 +288,12 @@ Diverse Nicht-Funktionale Anforderungen können nicht direkt abgedeckt werden
 </section>
 <section >
 <h3>GUI basierend auf Web-Technologien</h3>
-<img src="images/webui.png" style="background: transparent; border: none;" width=700 />
+<img src="images/webUi.png" style="background: transparent; border: none;" width=700 />
 <p><strong><em> -&gt; Portierbarkeit, Responsiveness </em></strong></p>
 </section>
 </section>
 <section >
-<img src="images/Questions.gif" style="background: transparent; border: none; box-shadow: none;" width=400 />
+<img src="images/questions.gif" style="background: transparent; border: none; box-shadow: none;" width=400 />
 </section>
 
 
