Update generated slides

--- a/presentations/bakti.html
+++ b/presentations/bakti.html
@@ -319,6 +319,7 @@ td {vertical-align:middle !important; }
 </tbody>
 </table>
 
+<p><a href="http://blackthorn-vision.com/what-is-the-future-of-the-desktop-development-for-windows-2/">What is the future of the desktop development for Windows</a></p>
 </section>
 </section>
 <section >
