Update generated slides

--- a/presentations/bakti.html
+++ b/presentations/bakti.html
@@ -145,7 +145,7 @@
 <li>Responsiveness - z.B. Tablet-App</li>
 <li>Widget-Konzept</li>
 <li>Innovation: State-of-the-Art Toolchain</li>
-<li>Validierte Umgebung, Zurückgreifen auf Business Know-How -&gt; <strong><em>Einsatz von Frameworks</em></strong> ...</li>
+<li>Compliance, IoT 4.0, Zurückgreifen auf Business Know-How -&gt; <strong><em>Einsatz von Frameworks</em></strong> ...</li>
 </ul>
 </section>
 </section>
