--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<ul>
 			<!--li> <a href="/presentations/65.html">Pacifici in un mondo pieno di rabbia</a></li-->
 			<li> <a href="/presentations/bakti.html">Bakti</a></li>
-			<li> <a href="/presentations/workshop.html">Bakti</a></li>
+			<li> <a href="/presentations/workshop.html">Workshop2</a></li>
 		</ul>
 	</h3>
 	</body>
