Update generated slides

--- a/presentations/FrameworkEvaluation.html
+++ b/presentations/FrameworkEvaluation.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>medica "Bakti"</title>
+    <title>medica "Frameworks"</title>
     <meta name="description" content="Evaluierung von Frameworks">
     <meta name="author" content="Antonino Leanza">
     <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -136,6 +136,7 @@
 <li>Konfigurieren</li>
 <li>Monitoring</li>
 <li>Service-Steuerung</li>
+<li>Alarmierung</li>
 </ul>
 </section>
 <section >
