--- a/presentations/workshop4.html
+++ b/presentations/workshop4.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>medica "Workshop 2"</title>
-    <meta name="description" content="Workshop 2">
+    <title>medica "Workshop 4"</title>
+    <meta name="description" content="Workshop 4">
     <meta name="author" content="Antonino Leanza">
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
@@ -53,81 +53,44 @@
 <h2>medica <strong><em>Workshop</em></strong></h2>
 <img src="images/workshop.jpg" style="background: transparent; border-style: none;"  width=500 />
 <br />
-<h3>Teil 2</h3>
+<h3>Teil 4</h3>
 <p><em>bbv Software Services AG</em></p>
-<p>Antonino Leanza &amp; Florian Bucher</p>
+<p>Antonino Leanza
+(28.06.18)</p>
 </section>
 <section >
 <h3>Ziel: DevOps anwenden können</h3>
-<img src="images/bericht-tabellarisch.jpg" style="background: transparent; border-style: none;"  width=300 />
+<img src="images/DevOps.png" style="background: transparent; border-style: none;"  width=1000 />
 <ol>
-<li>Source Verwaltung mit Git anwenden können</li>
-<li>CI/CD definieren in Visual Studio Team Services (VSTS)</li>
+<li>
+<p>CI/CD definieren in Visual Studio Team Services (VSTS)</p>
+<p><em>-&gt; Noch Fragen?</em></p>
+</li>
 <li>Software Entwicklungsprozess mit VSTS abbilden</li>
 </ol>
 </section>
 <section >
 <section >
-<h2>SCM mit Git</h2>
-<ol>
-<li>Theorie</li>
-<li>Praxis</li>
-</ol>
-</section>
-<section >
-<h3>Warum SCM?</h3>
-<img src="images/scm.png" style="background: transparent; border-style: none;"  width=300 />
-</section>
-<section >
-<h3>Warum Git?</h3>
-<img src="images/whygit.png" style="background: transparent; border-style: none;"  width=1000 /> 
-</section>
-<section >
-<h3>Branching Strategie: GitFlow</h3>
-<img src="images/GitFlowFeatureBranches.png" style="background: transparent; border-style: none;"  width=500 /> 
-</section>
-<section >
-<img src="images/GitFlowDevelopBranch.png" style="background: transparent; border-style: none;"  width=500 />
-</section>
-<section >
-<img src="images/GitFlowReleaseBranch.png" style="background: transparent; border-style: none;"  width=500 />
-</section>
-<section >
-<img src="images/GitFlowMasterBranch.png" style="background: transparent; border-style: none;"  width=500 />
-</section>
-<section >
-<img src="images/GitFlowHotfixBranch.png" style="background: transparent; border-style: none;"  width=500 />
-</section>
-<section >
-<h2>SCM mit Git - Praxis</h2>
-<ol>
-<li>Pull / Push</li>
-<li>Branch / Merge</li>
-<li>
-Anbindungen in...
-<ul>
-<li>VSTS</li>
-<li>Visual Studio</li>
-<li>Git Extensions</li>
-</ul>
-</li>
-</ol>
-</section>
+<h3>CI/CD definieren in VSTS</h3>
+<h3><em>Continuous Integration - Build Definition erstellen</em></h3>
 </section>
 <section >
 <h3>CI/CD definieren in VSTS</h3>
-<p>... in der Praxis</p>
-<ol>
-<li>Continuous Integration - Build Definition erstellen</li>
-<li>Continuous Integration - mit/ohne Unit Tests</li>
-<li>Continuous Deployment und das Release Management</li>
-</ol>
+<h3><em>Continuous Integration - mit/ohne Unit Tests</em></h3>
+</section>
+<section >
+<h3>CI/CD definieren in VSTS</h3>
+<h3><em>Continuous Deployment und das Release Management</em></h3>
+</section>
+<section >
+<h3>CI/CD definieren in VSTS</h3>
+<h3><em>Branches schützen</em></h3>
+</section>
 </section>
 <section >
 <h3>Software Entwicklungsprozess mit VSTS abbilden</h3>
 <ol>
 <li>Planerische Artefakte: Features / User Stories / Tasks</li>
-<li>Boards</li>
 <li>
 Rückverfolgbarkeit...
 <ul>
@@ -135,7 +98,19 @@ Rückverfolgbarkeit...
 <li>Branch aus Task erstellen</li>
 </ul>
 </li>
+<li>Boards</li>
+<li>Release Management</li>
 </ol>
+<aside class="notes">
+<p>
+<ul>
+	<li>Feature erstellen: Auf Konsole beliebige Mathematische Operation ausführen können.</li>
+	<li>Use Case erstellen: Als Benutzer möchte ich an der Konsole eine beliebige Operation eingeben können, somit spare ich Zeit weil ich Calc nicht öffnen muss.</li>
+	<li>Tasks erstellen: User-Eingabe parsen. Operation ausführen. Resultat darstellen. Fehleingabe darstellen.</li>
+	<li>Branch auf Task erzeugen.</li>	
+</ul>
+<p>
+</aside>
 </section>
 <section >
 <h3>Quellen</h3>
