--- a/presentations/vip.html
+++ b/presentations/vip.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>medica "Workshop 4"</title>
-    <meta name="description" content="Workshop 4">
+    <title>VIP-Event, IoT Beitrag</title>
+    <meta name="description" content="IoT Beitrag">
     <meta name="author" content="Antonino Leanza">
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
