--- a/index.html
+++ b/index.html
@@ -1,12 +1,9 @@
+<!DOCTYPE html>
 <html>
-	<body>
-	</p>
-	<h3>
-		<ul>
-			<!--li> <a href="/presentations/65.html">Pacifici in un mondo pieno di rabbia</a></li-->
-			<li> <a href="/presentations/bakti.html">Bakti</a></li>
-			<li> <a href="/presentations/vip.html">VIP Event</a></li>
-		</ul>
-	</h3>
-	</body>
+  <head>
+    <meta http-equiv="refresh" content="7; url='https://us02web.zoom.us/j/9953464131?pwd=UnNCQk1GOFVWVWxTcTE5c0dTUno0dz09'" />
+  </head>
+  <body>
+    <p>Tra poco sarai collegato all'adunanza della congregazione di Dübendorf Italienisch.</p>
+  </body>
 </html>
